# course_work_CV

./: CMakeLists.txt  README.md
data/output/results/: cube_noise_result.json  disconnected_bodies_result.json  hanging_stone_result.json  multiple_holes_result.json  single_hole_result.json  solid_cube_result.json  thin_bridge_result.json  z_gap_result.json
include/: volume_generator.h
src/: analyzer_main.cpp  connectivity_checker.cpp  connectivity_checker.h  main.cpp  reference_metrics.json  viewer.cpp  viewer.h  visualization_utils.cpp  visualization_utils.h  volume_generator.cpp
